plugins {
	id "java"
	id "application"
	id "eclipse"
}

repositories {
	mavenCentral()
	maven {
		url = "https://jitpack.io"
	}
	maven {
		url = "https://raw.github.com/mcobject/perst/mvn-repo/"
	}
}

tasks.withType(JavaCompile) {
	options.release = 17
	options.encoding = "UTF-8"
	options.compilerArgs << "-Xlint:all"
}

application {
	mainClass = "org.spider.Main"
}

dependencies {
	implementation("org.slf4j:slf4j-api:2.0.17")
	implementation("org.slf4j:jul-to-slf4j:2.0.17")
	implementation("ch.qos.logback:logback-core:1.5.18")
	implementation("ch.qos.logback:logback-classic:1.5.18")
	implementation("org.jsoup:jsoup:1.20.1")
	implementation("org.xerial:sqlite-jdbc:3.49.1.0")
	implementation("com.github.Bombe:jFCPlib:d279579ea44425b779fbf8220897aa1dc147ed26")
	implementation("org.freemarker:freemarker:2.3.34") // Keep version in Output.java up to date: Configuration.VERSION_...
	implementation("org.apache.commons:commons-text:1.13.1")
	implementation("com.mcobject:com.mcobject.perst:1.3-SNAPSHOT")
	testImplementation(platform("org.junit:junit-bom:5.12.2"))
	testImplementation("org.junit.jupiter:junit-jupiter")
	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
	useJUnitPlatform()
}
